feat: 更新数据库对象命名规范 - 添加学号和姓名拼音后缀
主要更新:
1. 数据库名更新为 hospital_3123004721_yuanzixuan
2. 所有表名添加后缀 _3123004721_yuanzixuan
3. 更新 app.py 使用表名常量动态构建 SQL 查询
4. 更新 sql_server_schema.sql 建表脚本
5. 更新 docs/README.md 文档反映新命名规范
6. 删除纯后端目录

表名对照:
- register -> register_3123004721_yuanzixuan
- doctor -> doctor_3123004721_yuanzixuan
- patient -> patient_3123004721_yuanzixuan
- drugs -> drugs_3123004721_yuanzixuan
- recipel -> recipel_3123004721_yuanzixuan
- prescription_drug -> prescription_drug_3123004721_yuanzixuan
- charge -> charge_3123004721_yuanzixuan
- pay -> pay_3123004721_yuanzixuan
- PGM -> PGM_3123004721_yuanzixuan

作者: 袁子轩 (3123004721)

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>医院信息管理系统</title>
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap 样式表 -->
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
+    <!-- Bootstrap 图标 -->
     <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-icons/1.11.0/font/bootstrap-icons.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
+    <!-- 自定义样式表 -->
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
 
