--- a/src/templates/doctors.html
+++ b/src/templates/doctors.html
@@ -106,13 +106,10 @@
                                     onclick="editDoctor({{ doc.d_octor_id }}, '{{ doc.d_name }}', '{{ doc.d_sex }}', {{ doc.d_age }}, '{{ doc.d_dept }}', '{{ doc.d_tel }}')">
                                     <i class="bi bi-pencil"></i>
                                 </button>
-                                <form action="{{ url_for('delete_doctor', id=doc.d_octor_id) }}" method="POST"
-                                    class="d-inline">
-                                    <button type="submit" class="btn btn-outline-danger btn-sm"
-                                        onclick="return confirm('确定要删除该医生吗？')">
-                                        <i class="bi bi-trash"></i>
-                                    </button>
-                                </form>
+                                <button type="button" class="btn btn-outline-danger btn-sm"
+                                    onclick="confirmDelete('{{ url_for('delete_doctor', id=doc.d_octor_id) }}', '确定要删除医生 <strong>{{ doc.d_name }}</strong> 吗？')">
+                                    <i class="bi bi-trash"></i>
+                                </button>
                             </div>
                         </td>
                     </tr>
