--- a/src/templates/patients.html
+++ b/src/templates/patients.html
@@ -111,13 +111,10 @@
                                     onclick="editPatient('{{ p.p_atient_id }}', '{{ p.p_name }}', {{ p.p_age }}, '{{ p.p_sex }}', '{{ p.p_tel }}', '{{ p.p_inf }}')">
                                     <i class="bi bi-pencil"></i>
                                 </button>
-                                <form action="{{ url_for('delete_patient', id=p.p_atient_id) }}" method="POST"
-                                    class="d-inline">
-                                    <button type="submit" class="btn btn-outline-danger btn-sm"
-                                        onclick="return confirm('确定要删除该病人吗？')">
-                                        <i class="bi bi-trash"></i>
-                                    </button>
-                                </form>
+                                <button type="button" class="btn btn-outline-danger btn-sm"
+                                    onclick="confirmDelete('{{ url_for('delete_patient', id=p.p_atient_id) }}', '确定要删除病人 <strong>{{ p.p_name }}</strong> 吗？')">
+                                    <i class="bi bi-trash"></i>
+                                </button>
                             </div>
                         </td>
                     </tr>
